fixed html file

--- a/hangman.html
+++ b/hangman.html
@@ -1,25 +1,44 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+ 
 <link rel="stylesheet" type="text/css" href="style.css">
-	<title></title>
-
-
-
-
-
-
-
+	<title>Puppy Hangman</title>
+	 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	 <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 
 
 
 </head>
 <body>
+<H1>Hangman</H1>
+
+<h2 id="initialOutput">
+</h2>
+<p>Category: Dog breeds</p>
+
+
+	
+<img src="https://i.ytimg.com/vi/Cz_XFY6CZ1c/maxresdefault.jpg" height = 200px, width = 200px>
+
+<br>
+<input id="guesser" type="" name="">
+
+
+
+<p> Your word is: <span id="randomWord"></span>
+</p>
+<div id="guessesRemaining">Guesses Remaining: </div>
+</div>
+<div id="currentWord"></div>
 
 
 
 
-<script type="text/javascript/games.js"></script>
+
+
+
+
+<script src="game.js"></script>
 </body>
 </html>
